Inline world map SVG to allow DOM-manipulation

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <!-- TODO: Add search-bar and "Start game"-button -->
     </header>
     <main>
-        <!-- TODO: Add world map-->
+        <div id="world-map-container"></div>
     </main>
     <footer>
         <!-- TODO: Team Mabonusa Credits -->
     </footer>
+    <script src="assets/world.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
