Add click listeners to each country path and a hover effect

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
         <h1>Country Guesser</h1>
         <!-- TODO: Add search-bar and "Start game"-button -->
+         <section>
+            <h2 id="guessed-country"></h2>
+         </section>
     </header>
     <main>
         <div id="world-map-container"></div>
