Use a SVG map for guessing the country (#11)
Closes #7 and #2.

* Inline world map SVG to allow DOM-manipulation

* Change world map SVG-source

* Add click listeners to each country path and a hover effect

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <header>
         <h1>Country Guesser</h1>
         <!-- TODO: Add search-bar and "Start game"-button -->
+         <section>
+            <h2 id="guessed-country"></h2>
+         </section>
     </header>
     <main>
-        <!-- TODO: Add world map-->
+        <div id="world-map-container"></div>
     </main>
     <footer>
         <!-- TODO: Team Mabonusa Credits -->
     </footer>
+    <script src="assets/world.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
