Added search input

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Country Guesser</h1>
         <!-- TODO: Add search-bar and "Start game"-button -->
+        <input type="text" id="searchInput" placeholder="Enter country name">
          <section>
             <h2 id="guessed-country"></h2>
          </section>
