--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Guesser</title>
     <link rel="stylesheet" href="index.css">
+    <script src="assets/svg-pan-zoom.min.js"></script>
 </head>
 <body>
     <header>
