Displaying filtered countries

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <h1>Country Guesser</h1>
         <!-- TODO: Add search-bar and "Start game"-button -->
         <input type="text" id="searchInput" placeholder="Enter country name">
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <div id="countryList"></div>
+            </div>
+        </div>
          <section>
             <h2 id="guessed-country"></h2>
          </section>
