--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 <body>
     <header>
         <h1>Country Guesser</h1>
-        <!-- TODO: Add search-bar and "Start game"-button -->
         <input type="text" id="searchInput" placeholder="Enter country name">
-         <section>
+        <!-- start guessing button-->
+        <button id="start-game">Start guessing</button>
+        <!-- section for guessing countries-->
+        <section>
+            <h2 id="current-country"></h2>
             <h2 id="guessed-country"></h2>
-         </section>
+        </section>
     </header>
     <main>
         <div id="world-map-container"></div>
+        <!-- div for status in game-->
+        <div id="game-status"></div>
+        <div id="remaining-attempts"></div>
+        <div id="correct-answers"></div>
     </main>
     <footer>
         <!-- TODO: Team Mabonusa Credits -->
