--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- section for guessing countries-->
         <section>
             <h2 id="current-country"></h2>
-        <div id="modal" class="modal">
+        <div id="modal" class="modal hidden">
             <div class="modal-content">
                 <span class="close-button">&times;</span>
                 <div id="countryList"></div>
